--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
 		"semi": ["error", "always"],
 		"prefer-const": "error",
 
-		"@typescript-eslint/no-unused-vars": "error",
+		"@typescript-eslint/no-unused-vars": "warn",
 		"@typescript-eslint/no-explicit-any": "error",
 		"react/prop-types": "off"
 	}
